// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PluginConsentDialog (controlled) > snapshot: 3-permission dialog 1`] = `
<body
  data-scroll-locked="1"
  style="pointer-events: none;"
>
  <span
    aria-hidden="true"
    data-aria-hidden="true"
    data-radix-focus-guard=""
    style="outline: none; opacity: 0; position: fixed; pointer-events: none;"
    tabindex="0"
  />
  <div
    aria-hidden="true"
    data-aria-hidden="true"
  />
  <div
    aria-hidden="true"
    class="fixed inset-0 z-50 bg-black/80 data-[state=open]:animate-in data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:fade-in-0"
    data-aria-hidden="true"
    data-state="open"
    style="pointer-events: auto;"
  />
  <div
    aria-describedby="radix-:rn:"
    aria-labelledby="radix-:rm:"
    class="fixed left-[50%] top-[50%] z-50 grid w-full translate-x-[-50%] translate-y-[-50%] gap-4 border bg-background p-6 shadow-lg duration-200 data-[state=open]:animate-in data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:fade-in-0 data-[state=closed]:zoom-out-95 data-[state=open]:zoom-in-95 data-[state=closed]:slide-out-to-left-1/2 data-[state=closed]:slide-out-to-top-[48%] data-[state=open]:slide-in-from-left-1/2 data-[state=open]:slide-in-from-top-[48%] sm:rounded-lg max-w-lg"
    data-state="open"
    data-testid="plugin-consent-dialog"
    id="radix-:rl:"
    role="alertdialog"
    style="pointer-events: auto;"
    tabindex="-1"
  >
    <div
      class="flex flex-col space-y-2 text-center sm:text-left"
    >
      <div
        class="flex items-center gap-2"
      >
        <span
          aria-hidden="true"
          class="flex h-8 w-8 items-center justify-center rounded-md bg-amber-500/15 text-amber-700 dark:text-amber-300"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-shield-alert h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 13c0 5-3.5 7.5-7.66 8.95a1 1 0 0 1-.67-.01C7.5 20.5 4 18 4 13V6a1 1 0 0 1 1-1c2 0 4.5-1.2 6.24-2.72a1.17 1.17 0 0 1 1.52 0C14.51 3.81 17 5 19 5a1 1 0 0 1 1 1z"
            />
            <path
              d="M12 8v4"
            />
            <path
              d="M12 16h.01"
            />
          </svg>
        </span>
        <h2
          class="text-lg font-semibold"
          data-testid="plugin-consent-dialog-title"
          id="radix-:rm:"
        >
          Install “
          Word Counter
          ” by 
          Jameson Daines
          ?
        </h2>
      </div>
      <div
        class="text-sm text-muted-foreground space-y-3"
        id="radix-:rn:"
      >
        <p>
          By approving, you trust this plugin with the permissions listed below. You can revoke them at any time by uninstalling the plugin.
        </p>
      </div>
    </div>
    <div
      class="space-y-3"
    >
      <ul
        class="space-y-2"
        data-testid="plugin-permissions-list"
      >
        <li
          class="flex items-start gap-3 rounded-md border bg-card p-3"
          data-risk="low"
          data-testid="plugin-permission-workspace:read"
        >
          <span
            aria-hidden="true"
            class="mt-0.5 flex h-7 w-7 shrink-0 items-center justify-center rounded-md bg-muted text-muted-foreground"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-folder h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 20a2 2 0 0 0 2-2V8a2 2 0 0 0-2-2h-7.9a2 2 0 0 1-1.69-.9L9.6 3.9A2 2 0 0 0 7.93 3H4a2 2 0 0 0-2 2v13a2 2 0 0 0 2 2Z"
              />
            </svg>
          </span>
          <div
            class="min-w-0 flex-1 space-y-1"
          >
            <div
              class="flex flex-wrap items-center gap-2"
            >
              <span
                class="text-sm font-medium leading-none"
              >
                Read your files
              </span>
              <span
                class="inline-flex items-center rounded-full px-2 py-0.5 text-[10px] font-medium uppercase tracking-wide bg-muted text-muted-foreground"
                data-testid="plugin-permission-workspace:read-risk"
              >
                Low risk
              </span>
            </div>
            <p
              class="text-xs text-muted-foreground"
            >
              This plugin can read every file in your current workspace.
            </p>
          </div>
        </li>
        <li
          class="flex items-start gap-3 rounded-md border bg-card p-3"
          data-risk="low"
          data-testid="plugin-permission-editor:selection"
        >
          <span
            aria-hidden="true"
            class="mt-0.5 flex h-7 w-7 shrink-0 items-center justify-center rounded-md bg-muted text-muted-foreground"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-mouse-pointer h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.586 12.586 19 19"
              />
              <path
                d="M3.688 3.037a.497.497 0 0 0-.651.651l6.5 15.999a.501.501 0 0 0 .947-.062l1.569-6.083a2 2 0 0 1 1.448-1.479l6.124-1.579a.5.5 0 0 0 .063-.947z"
              />
            </svg>
          </span>
          <div
            class="min-w-0 flex-1 space-y-1"
          >
            <div
              class="flex flex-wrap items-center gap-2"
            >
              <span
                class="text-sm font-medium leading-none"
              >
                Read your current text selection
              </span>
              <span
                class="inline-flex items-center rounded-full px-2 py-0.5 text-[10px] font-medium uppercase tracking-wide bg-muted text-muted-foreground"
                data-testid="plugin-permission-editor:selection-risk"
              >
                Low risk
              </span>
            </div>
            <p
              class="text-xs text-muted-foreground"
            >
              This plugin can see the text you have selected in the editor.
            </p>
          </div>
        </li>
        <li
          class="flex items-start gap-3 rounded-md border bg-card p-3"
          data-risk="medium"
          data-testid="plugin-permission-ai:invoke"
        >
          <span
            aria-hidden="true"
            class="mt-0.5 flex h-7 w-7 shrink-0 items-center justify-center rounded-md bg-amber-500/15 text-amber-700 dark:text-amber-300"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-sparkles h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.017 2.814a1 1 0 0 1 1.966 0l1.051 5.558a2 2 0 0 0 1.594 1.594l5.558 1.051a1 1 0 0 1 0 1.966l-5.558 1.051a2 2 0 0 0-1.594 1.594l-1.051 5.558a1 1 0 0 1-1.966 0l-1.051-5.558a2 2 0 0 0-1.594-1.594l-5.558-1.051a1 1 0 0 1 0-1.966l5.558-1.051a2 2 0 0 0 1.594-1.594z"
              />
              <path
                d="M20 2v4"
              />
              <path
                d="M22 4h-4"
              />
              <circle
                cx="4"
                cy="20"
                r="2"
              />
            </svg>
          </span>
          <div
            class="min-w-0 flex-1 space-y-1"
          >
            <div
              class="flex flex-wrap items-center gap-2"
            >
              <span
                class="text-sm font-medium leading-none"
              >
                Send prompts to your AI provider
              </span>
              <span
                class="inline-flex items-center rounded-full px-2 py-0.5 text-[10px] font-medium uppercase tracking-wide bg-amber-500/15 text-amber-700 dark:text-amber-300"
                data-testid="plugin-permission-ai:invoke-risk"
              >
                Medium risk
              </span>
            </div>
            <p
              class="text-xs text-muted-foreground"
            >
              This plugin can call your configured AI provider on your behalf.
               
              <span
                class="font-medium text-foreground/80"
                data-testid="plugin-permission-ai:invoke-note"
              >
                Counts toward your AI bill.
              </span>
            </p>
          </div>
        </li>
      </ul>
      <p
        class="text-xs text-muted-foreground"
        data-testid="plugin-consent-dialog-source"
      >
        <span
          class="font-medium text-foreground/70"
        >
          Source:
        </span>
         
        github.com/jamesondaines/word-counter
      </p>
    </div>
    <div
      class="flex flex-col-reverse sm:flex-row sm:justify-end sm:space-x-2"
    >
      <button
        class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 border border-input bg-background hover:bg-accent hover:text-accent-foreground h-10 px-4 py-2 mt-2 sm:mt-0"
        data-testid="plugin-consent-dialog-cancel"
        type="button"
      >
        Cancel
      </button>
      <button
        class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-primary text-primary-foreground hover:bg-primary/90 h-10 px-4 py-2"
        data-testid="plugin-consent-dialog-approve"
        type="button"
      >
        Approve & Install
      </button>
    </div>
  </div>
  <span
    aria-hidden="true"
    data-aria-hidden="true"
    data-radix-focus-guard=""
    style="outline: none; opacity: 0; position: fixed; pointer-events: none;"
    tabindex="0"
  />
</body>
`;

exports[`PluginConsentDialog (controlled) > snapshot: 6-permission dialog 1`] = `
<body
  data-scroll-locked="1"
  style="pointer-events: none;"
>
  <span
    aria-hidden="true"
    data-aria-hidden="true"
    data-radix-focus-guard=""
    style="outline: none; opacity: 0; position: fixed; pointer-events: none;"
    tabindex="0"
  />
  <div
    aria-hidden="true"
    data-aria-hidden="true"
  />
  <div
    aria-hidden="true"
    class="fixed inset-0 z-50 bg-black/80 data-[state=open]:animate-in data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:fade-in-0"
    data-aria-hidden="true"
    data-state="open"
    style="pointer-events: auto;"
  />
  <div
    aria-describedby="radix-:rq:"
    aria-labelledby="radix-:rp:"
    class="fixed left-[50%] top-[50%] z-50 grid w-full translate-x-[-50%] translate-y-[-50%] gap-4 border bg-background p-6 shadow-lg duration-200 data-[state=open]:animate-in data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:fade-in-0 data-[state=closed]:zoom-out-95 data-[state=open]:zoom-in-95 data-[state=closed]:slide-out-to-left-1/2 data-[state=closed]:slide-out-to-top-[48%] data-[state=open]:slide-in-from-left-1/2 data-[state=open]:slide-in-from-top-[48%] sm:rounded-lg max-w-lg"
    data-state="open"
    data-testid="plugin-consent-dialog"
    id="radix-:ro:"
    role="alertdialog"
    style="pointer-events: auto;"
    tabindex="-1"
  >
    <div
      class="flex flex-col space-y-2 text-center sm:text-left"
    >
      <div
        class="flex items-center gap-2"
      >
        <span
          aria-hidden="true"
          class="flex h-8 w-8 items-center justify-center rounded-md bg-amber-500/15 text-amber-700 dark:text-amber-300"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-shield-alert h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 13c0 5-3.5 7.5-7.66 8.95a1 1 0 0 1-.67-.01C7.5 20.5 4 18 4 13V6a1 1 0 0 1 1-1c2 0 4.5-1.2 6.24-2.72a1.17 1.17 0 0 1 1.52 0C14.51 3.81 17 5 19 5a1 1 0 0 1 1 1z"
            />
            <path
              d="M12 8v4"
            />
            <path
              d="M12 16h.01"
            />
          </svg>
        </span>
        <h2
          class="text-lg font-semibold"
          data-testid="plugin-consent-dialog-title"
          id="radix-:rp:"
        >
          Install “
          Word Counter
          ” by 
          Jameson Daines
          ?
        </h2>
      </div>
      <div
        class="text-sm text-muted-foreground space-y-3"
        id="radix-:rq:"
      >
        <p>
          By approving, you trust this plugin with the permissions listed below. You can revoke them at any time by uninstalling the plugin.
        </p>
      </div>
    </div>
    <div
      class="space-y-3"
    >
      <ul
        class="space-y-2"
        data-testid="plugin-permissions-list"
      >
        <li
          class="flex items-start gap-3 rounded-md border bg-card p-3"
          data-risk="low"
          data-testid="plugin-permission-workspace:read"
        >
          <span
            aria-hidden="true"
            class="mt-0.5 flex h-7 w-7 shrink-0 items-center justify-center rounded-md bg-muted text-muted-foreground"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-folder h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 20a2 2 0 0 0 2-2V8a2 2 0 0 0-2-2h-7.9a2 2 0 0 1-1.69-.9L9.6 3.9A2 2 0 0 0 7.93 3H4a2 2 0 0 0-2 2v13a2 2 0 0 0 2 2Z"
              />
            </svg>
          </span>
          <div
            class="min-w-0 flex-1 space-y-1"
          >
            <div
              class="flex flex-wrap items-center gap-2"
            >
              <span
                class="text-sm font-medium leading-none"
              >
                Read your files
              </span>
              <span
                class="inline-flex items-center rounded-full px-2 py-0.5 text-[10px] font-medium uppercase tracking-wide bg-muted text-muted-foreground"
                data-testid="plugin-permission-workspace:read-risk"
              >
                Low risk
              </span>
            </div>
            <p
              class="text-xs text-muted-foreground"
            >
              This plugin can read every file in your current workspace.
            </p>
          </div>
        </li>
        <li
          class="flex items-start gap-3 rounded-md border bg-card p-3"
          data-risk="medium"
          data-testid="plugin-permission-workspace:write"
        >
          <span
            aria-hidden="true"
            class="mt-0.5 flex h-7 w-7 shrink-0 items-center justify-center rounded-md bg-amber-500/15 text-amber-700 dark:text-amber-300"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-folder-pen h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M2 11.5V5a2 2 0 0 1 2-2h3.9c.7 0 1.3.3 1.7.9l.8 1.2c.4.6 1 .9 1.7.9H20a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2h-9.5"
              />
              <path
                d="M11.378 13.626a1 1 0 1 0-3.004-3.004l-5.01 5.012a2 2 0 0 0-.506.854l-.837 2.87a.5.5 0 0 0 .62.62l2.87-.837a2 2 0 0 0 .854-.506z"
              />
            </svg>
          </span>
          <div
            class="min-w-0 flex-1 space-y-1"
          >
            <div
              class="flex flex-wrap items-center gap-2"
            >
              <span
                class="text-sm font-medium leading-none"
              >
                Modify your files
              </span>
              <span
                class="inline-flex items-center rounded-full px-2 py-0.5 text-[10px] font-medium uppercase tracking-wide bg-amber-500/15 text-amber-700 dark:text-amber-300"
                data-testid="plugin-permission-workspace:write-risk"
              >
                Medium risk
              </span>
            </div>
            <p
              class="text-xs text-muted-foreground"
            >
              This plugin can create, edit, or delete files in your current workspace.
            </p>
          </div>
        </li>
        <li
          class="flex items-start gap-3 rounded-md border bg-card p-3"
          data-risk="low"
          data-testid="plugin-permission-editor:selection"
        >
          <span
            aria-hidden="true"
            class="mt-0.5 flex h-7 w-7 shrink-0 items-center justify-center rounded-md bg-muted text-muted-foreground"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-mouse-pointer h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.586 12.586 19 19"
              />
              <path
                d="M3.688 3.037a.497.497 0 0 0-.651.651l6.5 15.999a.501.501 0 0 0 .947-.062l1.569-6.083a2 2 0 0 1 1.448-1.479l6.124-1.579a.5.5 0 0 0 .063-.947z"
              />
            </svg>
          </span>
          <div
            class="min-w-0 flex-1 space-y-1"
          >
            <div
              class="flex flex-wrap items-center gap-2"
            >
              <span
                class="text-sm font-medium leading-none"
              >
                Read your current text selection
              </span>
              <span
                class="inline-flex items-center rounded-full px-2 py-0.5 text-[10px] font-medium uppercase tracking-wide bg-muted text-muted-foreground"
                data-testid="plugin-permission-editor:selection-risk"
              >
                Low risk
              </span>
            </div>
            <p
              class="text-xs text-muted-foreground"
            >
              This plugin can see the text you have selected in the editor.
            </p>
          </div>
        </li>
        <li
          class="flex items-start gap-3 rounded-md border bg-card p-3"
          data-risk="low"
          data-testid="plugin-permission-editor:write"
        >
          <span
            aria-hidden="true"
            class="mt-0.5 flex h-7 w-7 shrink-0 items-center justify-center rounded-md bg-muted text-muted-foreground"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-text-cursor-input h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 20h-1a2 2 0 0 1-2-2 2 2 0 0 1-2 2H6"
              />
              <path
                d="M13 8h7a2 2 0 0 1 2 2v4a2 2 0 0 1-2 2h-7"
              />
              <path
                d="M5 16H4a2 2 0 0 1-2-2v-4a2 2 0 0 1 2-2h1"
              />
              <path
                d="M6 4h1a2 2 0 0 1 2 2 2 2 0 0 1 2-2h1"
              />
              <path
                d="M9 6v12"
              />
            </svg>
          </span>
          <div
            class="min-w-0 flex-1 space-y-1"
          >
            <div
              class="flex flex-wrap items-center gap-2"
            >
              <span
                class="text-sm font-medium leading-none"
              >
                Insert or replace text in your editor
              </span>
              <span
                class="inline-flex items-center rounded-full px-2 py-0.5 text-[10px] font-medium uppercase tracking-wide bg-muted text-muted-foreground"
                data-testid="plugin-permission-editor:write-risk"
              >
                Low risk
              </span>
            </div>
            <p
              class="text-xs text-muted-foreground"
            >
              This plugin can write text into the file you are editing.
            </p>
          </div>
        </li>
        <li
          class="flex items-start gap-3 rounded-md border bg-card p-3"
          data-risk="medium"
          data-testid="plugin-permission-ai:invoke"
        >
          <span
            aria-hidden="true"
            class="mt-0.5 flex h-7 w-7 shrink-0 items-center justify-center rounded-md bg-amber-500/15 text-amber-700 dark:text-amber-300"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-sparkles h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.017 2.814a1 1 0 0 1 1.966 0l1.051 5.558a2 2 0 0 0 1.594 1.594l5.558 1.051a1 1 0 0 1 0 1.966l-5.558 1.051a2 2 0 0 0-1.594 1.594l-1.051 5.558a1 1 0 0 1-1.966 0l-1.051-5.558a2 2 0 0 0-1.594-1.594l-5.558-1.051a1 1 0 0 1 0-1.966l5.558-1.051a2 2 0 0 0 1.594-1.594z"
              />
              <path
                d="M20 2v4"
              />
              <path
                d="M22 4h-4"
              />
              <circle
                cx="4"
                cy="20"
                r="2"
              />
            </svg>
          </span>
          <div
            class="min-w-0 flex-1 space-y-1"
          >
            <div
              class="flex flex-wrap items-center gap-2"
            >
              <span
                class="text-sm font-medium leading-none"
              >
                Send prompts to your AI provider
              </span>
              <span
                class="inline-flex items-center rounded-full px-2 py-0.5 text-[10px] font-medium uppercase tracking-wide bg-amber-500/15 text-amber-700 dark:text-amber-300"
                data-testid="plugin-permission-ai:invoke-risk"
              >
                Medium risk
              </span>
            </div>
            <p
              class="text-xs text-muted-foreground"
            >
              This plugin can call your configured AI provider on your behalf.
               
              <span
                class="font-medium text-foreground/80"
                data-testid="plugin-permission-ai:invoke-note"
              >
                Counts toward your AI bill.
              </span>
            </p>
          </div>
        </li>
        <li
          class="flex items-start gap-3 rounded-md border bg-card p-3"
          data-risk="medium"
          data-testid="plugin-permission-network"
        >
          <span
            aria-hidden="true"
            class="mt-0.5 flex h-7 w-7 shrink-0 items-center justify-center rounded-md bg-amber-500/15 text-amber-700 dark:text-amber-300"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-globe h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <path
                d="M12 2a14.5 14.5 0 0 0 0 20 14.5 14.5 0 0 0 0-20"
              />
              <path
                d="M2 12h20"
              />
            </svg>
          </span>
          <div
            class="min-w-0 flex-1 space-y-1"
          >
            <div
              class="flex flex-wrap items-center gap-2"
            >
              <span
                class="text-sm font-medium leading-none"
              >
                Make network requests
              </span>
              <span
                class="inline-flex items-center rounded-full px-2 py-0.5 text-[10px] font-medium uppercase tracking-wide bg-amber-500/15 text-amber-700 dark:text-amber-300"
                data-testid="plugin-permission-network-risk"
              >
                Medium risk
              </span>
            </div>
            <p
              class="text-xs text-muted-foreground"
            >
              This plugin can talk to other servers on the internet.
               
              <span
                class="font-medium text-foreground/80"
                data-testid="plugin-permission-network-note"
              >
                Could be used to send your data off your machine.
              </span>
            </p>
          </div>
        </li>
      </ul>
      <p
        class="text-xs text-muted-foreground"
        data-testid="plugin-consent-dialog-source"
      >
        <span
          class="font-medium text-foreground/70"
        >
          Source:
        </span>
         
        github.com/jamesondaines/word-counter
      </p>
    </div>
    <div
      class="flex flex-col-reverse sm:flex-row sm:justify-end sm:space-x-2"
    >
      <button
        class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 border border-input bg-background hover:bg-accent hover:text-accent-foreground h-10 px-4 py-2 mt-2 sm:mt-0"
        data-testid="plugin-consent-dialog-cancel"
        type="button"
      >
        Cancel
      </button>
      <button
        class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-primary text-primary-foreground hover:bg-primary/90 h-10 px-4 py-2"
        data-testid="plugin-consent-dialog-approve"
        type="button"
      >
        Approve & Install
      </button>
    </div>
  </div>
  <span
    aria-hidden="true"
    data-aria-hidden="true"
    data-radix-focus-guard=""
    style="outline: none; opacity: 0; position: fixed; pointer-events: none;"
    tabindex="0"
  />
</body>
`;
